2006-02-26 David Brown <dmlb2000@gmail.com>
	* info/patches/sws2_patches/suspend2-2.2-for-2.6.15.1.patch: modified
	  to fix source url because depends is no longer a var for the patch
	* info/patches/sws2_patches/suspend2-2.2.0.1-for-2.6.16-rc3.patch: added

2006-02-24 David Brown <dmlb2000@gmail.com>
	* info/patches/sws2_patches/suspend2-2.2-for-2.6.15.1.patch: modified
	  to remove depends on patch-2.6.15.1 cause it does work on others

2006-02-24 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to 2.6.16-rc4-mm2
	* info/patches/mm_patches/2.6.16-rc4-mm2: added

2006-02-20 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to 2.6.16-rc4-mm1
	* info/patches/mm_patches/2.6.16-rc4-mm1: added

2006-02-17 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.16-rc4
	* info/patches/PRE_2_6/patch-2.6.16-rc4: added

2006-02-14 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to 2.6.16-rc3-mm1
	* info/patches/mm_patches/2.6.16-rc3-mm1: added

2006-02-12 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.16-rc3
	* info/patches/PRE_2_6/patch-2.6.16-rc3: added

2006-02-11 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.15-cks4
	* info/patches/ck_server_patches/patch-2.6.15-cks4: added

2006-02-11 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.15-ck4
	* info/patches/ck_patches/patch-2.6.15-ck4: added

2006-02-10 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.15.4
	* info/patches/maintenance_patches/patch-2.6.15.4: added

2006-02-08 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to 2.6.16-rc2-mm1
	* info/patches/mm_patches/2.6.16-rc2-mm1: added

2006-02-06 David Brown <dmlb2000@gmail.com>
	* info/patches/ck_patches/patch-2.6.14-ck9: added
	* info/patches/ck_server_patches/patch-2.6.14-cks9: added

2006-02-06 David Brown <dmlb2000@gmail.com>